[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://assets/floor.png" type="Texture" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://entities/Turret.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Floor" type="TextureRect" parent="."]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="StartPositionPlayer" type="Position2D" parent="."]
position = Vector2( 500, 420 )

[node name="Turret" parent="." instance=ExtResource( 5 )]
position = Vector2( 311, 213 )

[node name="Turret2" parent="." instance=ExtResource( 5 )]

[node name="Turret3" parent="." instance=ExtResource( 5 )]
